--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:text="Latitude"
+        android:text="@string/latitude"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/usernameInput"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,7 @@
         android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Latitude"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -45,7 +45,7 @@
         android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Longtitude"
-        android:inputType="textPassword"
+        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
